--- a/Dissertação/aftertext/references.bib
+++ b/Dissertação/aftertext/references.bib
@@ -138,3 +138,26 @@
 	ISBN = {},
 	Note = {Kindle Edition}
 }
+
+@misc{uci_energy,
+    author = {H\'ector Hern\'andez and others},
+    title = {Individual household electric power consumption Data Set},
+    howpublished = {\url{https://archive.ics.uci.edu/dataset/235/individual+household+electric+power+consumption}},
+    note = {Acesso em: 11 ago. 2025}
+}
+
+@misc{greek_water,
+    author = {{Hellenic Data Service}},
+    title = {Water Consumption Dataset},
+    howpublished = {\url{https://data.hellenicdataservice.gr/dataset/78776f38-a58b-4a2a-a8f9-85b964fe5c95}},
+    note = {Acesso em: 11 ago. 2025}
+}
+
+@standard{openfog2018,
+  title        = {IEEE Standard for Adoption of OpenFog Reference Architecture for Fog Computing},
+  journal      = {IEEE Std 1934-2018},
+  year         = {2018},
+  pages        = {1-176},
+  doi          = {10.1109/IEEESTD.2018.8423800},
+  keywords     = {IEEE Standards, Information technology, Edge computing, Communications technology, adoption, communication technology IEEE 1934™, information technology, OpenFog, operational technology}
+}
