--- a/Dissertação/beforetext/beforetext.tex
+++ b/Dissertação/beforetext/beforetext.tex
@@ -119,20 +119,21 @@ sendo, meus pais, os maiores entre eles.
 \setlength{\absparsep}{18pt} % ajusta o espaçamento dos parágrafos do resumo
 \begin{resumo}
 	\SingleSpacing
-	No resumo são ressaltados o objetivo da pesquisa, o método utilizado, as discussões e os resultados com destaque apenas para os pontos principais. O resumo deve ser significativo, composto de uma sequência de frases concisas, afirmativas, e não de uma enumeração de tópicos. Não deve conter citações. Deve usar o verbo na voz ativa e na terceira pessoa do singular. O texto do resumo deve ser digitado, em um único bloco, sem espaço de parágrafo. O espaçamento entre linhas é simples e o tamanho da fonte é 12. Abaixo do resumo, informar as palavras-chave (palavras ou expressões significativas retiradas do texto) ou, termos retirados de thesaurus da área. Deve conter de 150 a 500 palavras. O resumo é elaborado de acordo com a NBR 6028.
+	Este trabalho apresentou o desenvolvimento e a avaliação de uma arquitetura modular para ambientes de computação em névoa, projetada para suportar comunicação direta entre diferentes domínios e integrar dispositivos de borda, nós de névoa e a nuvem, tomando como referência o modelo do OpenFog Consortium. A solução foi construída com base nos pilares de escalabilidade, abertura, autonomia, programabilidade e hierarquia, considerando o contexto de cidades inteligentes. A proposta incorporou abstração de protocolos para permitir interoperabilidade entre diferentes tecnologias de comunicação, além de um mecanismo de balanceamento dinâmico de carga e agregação de dados para otimizar o uso de recursos e reduzir o tráfego de dados para a nuvem. A metodologia envolveu a simulação de dois dias de operação contínua, com dispositivos distribuídos em dois domínios de névoa e geração periódica de dados, analisando métricas de latência, consumo de memória, throughput, taxa de entrega e fator de agregação. Os resultados indicaram latência ponta a ponta média de 15,6 ms, taxa de entrega de 100\% e redução de aproximadamente 99,97\% nas requisições à nuvem, mantendo desempenho compatível com aplicações sensíveis ao tempo. A comparação com trabalhos como o EXEGESIS evidenciou diferenças no gerenciamento de serviços e na flexibilidade de adaptação a novos cenários, destacando vantagens na separação entre a camada de aplicação e a de protocolos. Entre as perspectivas futuras estão a implementação de autenticação e criptografia ponta a ponta, estratégias de recuperação automática e validação da arquitetura em domínios como saúde conectada e transporte inteligente.
 	
-	\textbf{Palavras-chave}: Palavra-chave 1. Palavra-chave 2. Palavra-chave 3.
+	\textbf{Palavras-chave}: computação em névoa. interoperabilidade. balanceamento de carga.
 \end{resumo}
 
 % resumo em inglês
 \begin{resumo}[Abstract]
 	\SingleSpacing
 	\begin{otherlanguage*}{english}
-		Resumo traduzido para outros idiomas, neste caso, inglês. Segue o formato do resumo feito na língua vernácula. As palavras-chave traduzidas, versão em língua estrangeira, são colocadas abaixo do texto precedidas pela expressão “Keywords”, separadas por ponto.
-		
-		\textbf{Keywords}: Keyword 1. Keyword 2. Keyword 3.
+		This research presented the development and evaluation of a modular architecture for fog computing environments, designed to support direct communication between different domains and to integrate edge devices, fog nodes, and the cloud, taking the OpenFog Consortium reference model as a guideline. The solution was built on the pillars of scalability, openness, autonomy, programmability, and hierarchy, within the context of smart cities. The proposal incorporated protocol abstraction to enable interoperability among different communication technologies, along with a dynamic load balancing mechanism and data aggregation to optimize resource usage and reduce cloud traffic. The methodology involved simulating two days of continuous operation, with devices distributed across two fog domains and generating periodic data, analyzing metrics such as latency, memory consumption, throughput, delivery rate, and aggregation factor. The results indicated an average end-to-end latency of 15.6 ms, a delivery rate of 100\%, and approximately 99.97\% reduction in cloud requests, maintaining performance compatible with time-sensitive applications. Comparison with works such as EXEGESIS highlighted differences in service management and adaptability to new scenarios, with advantages in the separation between the application and protocol layers. Future perspectives include implementing end-to-end authentication and encryption, automatic recovery strategies, and validating the architecture in domains such as connected healthcare and intelligent transportation.
+
+		\textbf{Keywords}: fog computing. interoperability. load balancing.
 	\end{otherlanguage*}
 \end{resumo}
+
 
 %% resumo em francês 
 %\begin{resumo}[Résumé]
