--- a/Dissertação/aftertext/references.bib
+++ b/Dissertação/aftertext/references.bib
@@ -1,163 +1,208 @@
 @article{markakis2017,
-	Author = {E. K. Markakis and A. Sideris and G. Mastorakis and C. X. Mavromoustakis and E. Pallis and Y. Charalabidis},
-	Title = {{EXEGESIS}: Extreme Edge Resource Harvesting for a Virtualized Fog Environment},
-	Journal = {IEEE Communications Magazine},
-	Volume = {55},
-	Number = {7},
-	Pages = {173--179},
-	Year = {2017},
-	Month = {July},
-	doi = {10.1109/MCOM.2017.1600730}
+  author  = {E. K. Markakis and A. Sideris and G. Mastorakis and C. X. Mavromoustakis and E. Pallis and Y. Charalabidis},
+  title   = {{EXEGESIS}: Extreme Edge Resource Harvesting for a Virtualized Fog Environment},
+  journal = {IEEE Communications Magazine},
+  volume  = {55},
+  number  = {7},
+  pages   = {173--179},
+  year    = {2017},
+  month   = {July},
+  doi     = {10.1109/MCOM.2017.1600730}
 }
 
 @article{cassel2024,
-	Author = {Gustavo Andr{\'e} Setti Cassel and Rodrigo da Rosa Righi and Cristiano Andr{\'e} da Costa and Marta Rosecler Bez and Marcelo Pasin},
-	Title = {Towards providing a priority-based vital sign offloading in healthcare with serverless computing and a fog-cloud architecture},
-	Journal = {Future Generation Computer Systems},
-	Volume = {157},
-	Pages = {51--66},
-	Year = {2024},
-	doi = {10.1016/j.future.2024.03.021}
+  author  = {Gustavo Andr{\'e} Setti Cassel and Rodrigo da Rosa Righi and Cristiano Andr{\'e} da Costa and Marta Rosecler Bez and Marcelo Pasin},
+  title   = {Towards providing a priority-based vital sign offloading in healthcare with serverless computing and a fog-cloud architecture},
+  journal = {Future Generation Computer Systems},
+  volume  = {157},
+  pages   = {51--66},
+  year    = {2024},
+  doi     = {10.1016/j.future.2024.03.021}
 }
 
 @book{tanenbaum2015,
-	Author = {Andrew S. Tanenbaum and Herbert Bos},
-	Title = {Modern Operating Systems},
-	Edition = {4},
-	Publisher = {Pearson},
-	Year = {2015},
-	Address = {Boston},
-	ISBN = {978-0133591620}
+  author    = {Andrew S. Tanenbaum and Herbert Bos},
+  title     = {Modern Operating Systems},
+  edition   = {4},
+  publisher = {Pearson},
+  year      = {2015},
+  address   = {Boston},
+  isbn      = {978-0133591620}
 }
 
 @article{rahmani2018,
-	Author = {Amir M. Rahmani and Tuan Nguyen Gia and Behailu Negash and Ali Anzanpour and Iman Azimi and Mikael Lagerspetz and Pasi Liljeberg},
-	Title = {Exploiting smart e-Health gateways at the edge of healthcare Internet-of-Things: A fog computing approach},
-	Journal = {Future Generation Computer Systems},
-	Volume = {78},
-	Pages = {641--658},
-	Year = {2018},
-	doi = {10.1016/j.future.2017.02.014}
+  author  = {Amir M. Rahmani and Tuan Nguyen Gia and Behailu Negash and Ali Anzanpour and Iman Azimi and Mikael Lagerspetz and Pasi Liljeberg},
+  title   = {Exploiting smart e-Health gateways at the edge of healthcare Internet-of-Things: A fog computing approach},
+  journal = {Future Generation Computer Systems},
+  volume  = {78},
+  pages   = {641--658},
+  year    = {2018},
+  doi     = {10.1016/j.future.2017.02.014}
 }
 
 @book{tanenbaum2011,
-	Author = {Andrew S. Tanenbaum and David J. Wetherall},
-	Title = {Computer Networks},
-	Edition = {5},
-	Publisher = {Pearson},
-	Year = {2011},
-	Address = {Boston},
-	ISBN = {978-0132126953}
+  author    = {Andrew S. Tanenbaum and David J. Wetherall},
+  title     = {Computer Networks},
+  edition   = {5},
+  publisher = {Pearson},
+  year      = {2011},
+  address   = {Boston},
+  isbn      = {978-0132126953}
 }
 
 @book{gourley2002,
-	Author = {David Gourley and Brian Totty and Marjorie Sayer and Sailu Reddy and Anshu Aggarwal},
-	Title = {HTTP: The Definitive Guide},
-	Publisher = {O'Reilly Media},
-	Year = {2002},
-	Address = {Sebastopol, CA},
-	ISBN = {978-1565925090}
+  author    = {David Gourley and Brian Totty and Marjorie Sayer and Sailu Reddy and Anshu Aggarwal},
+  title     = {HTTP: The Definitive Guide},
+  publisher = {O'Reilly Media},
+  year      = {2002},
+  address   = {Sebastopol, CA},
+  isbn      = {978-1565925090}
 }
 
 @inproceedings{wang2013,
-	Author = {Quan Wang and Weiping Ding and Xiaolong Xu and Fei Wu and Weijia Jia},
-	Title = {WebSocket-based Real-time Communication for Industrial Automation},
-	Booktitle = {Proceedings of the 2013 IEEE International Conference on Industrial Technology (ICIT)},
-	Pages = {1080--1085},
-	Year = {2013},
-	doi = {10.1109/ICIT.2013.6505823}
+  author    = {Quan Wang and Weiping Ding and Xiaolong Xu and Fei Wu and Weijia Jia},
+  title     = {WebSocket-based Real-time Communication for Industrial Automation},
+  booktitle = {Proceedings of the 2013 IEEE International Conference on Industrial Technology (ICIT)},
+  pages     = {1080--1085},
+  year      = {2013},
+  doi       = {10.1109/ICIT.2013.6505823}
 }
 
 @book{barrett2005,
-	Author = {Daniel J. Barrett and Richard E. Silverman and Robert G. Byrnes},
-	Title = {SSH, The Secure Shell: The Definitive Guide},
-	Edition = {2},
-	Publisher = {O'Reilly Media},
-	Year = {2005},
-	Address = {Sebastopol, CA},
-	ISBN = {978-0596008956}
+  author    = {Daniel J. Barrett and Richard E. Silverman and Robert G. Byrnes},
+  title     = {SSH, The Secure Shell: The Definitive Guide},
+  edition   = {2},
+  publisher = {O'Reilly Media},
+  year      = {2005},
+  address   = {Sebastopol, CA},
+  isbn      = {978-0596008956}
 }
 
 @article{bormann2012,
-	Author = {Carsten Bormann and Angelo P. Castellani and Zach Shelby},
-	Title = {CoAP: An Application Protocol for Billions of Tiny Internet Nodes},
-	Journal = {IEEE Internet Computing},
-	Volume = {16},
-	Number = {2},
-	Pages = {62--67},
-	Year = {2012},
-	Month = {March-April},
-	doi = {10.1109/MIC.2012.29}
+  author  = {Carsten Bormann and Angelo P. Castellani and Zach Shelby},
+  title   = {CoAP: An Application Protocol for Billions of Tiny Internet Nodes},
+  journal = {IEEE Internet Computing},
+  volume  = {16},
+  number  = {2},
+  pages   = {62--67},
+  year    = {2012},
+  month   = {March-April},
+  doi     = {10.1109/MIC.2012.29}
 }
 
 @book{silveira2019,
-	Author = {Rubens Prates da Silveira},
-	Title = {GraphQL},
-	Subtitle = {A nova alternativa para criação de APIs},
-	Publisher = {Casa do Código},
-	Year = {2019},
-	Address = {São Paulo},
-	ISBN = {978-6586057956}
+  author    = {Rubens Prates da Silveira},
+  title     = {GraphQL},
+  subtitle  = {A nova alternativa para criação de APIs},
+  publisher = {Casa do Código},
+  year      = {2019},
+  address   = {São Paulo},
+  isbn      = {978-6586057956}
 }
 
 @article{khan2021,
-	Author = {H. M. Khan and A. Khan and F. Jabeen and A. U. Rahman},
-	Title = {Privacy preserving data aggregation with fault tolerance in fog-enabled smart grids},
-	Journal = {Sustainable Cities and Society},
-	Volume = {64},
-	Pages = {102522},
-	Year = {2021},
-	doi = {10.1016/j.scs.2020.102522}
+  author  = {H. M. Khan and A. Khan and F. Jabeen and A. U. Rahman},
+  title   = {Privacy preserving data aggregation with fault tolerance in fog-enabled smart grids},
+  journal = {Sustainable Cities and Society},
+  volume  = {64},
+  pages   = {102522},
+  year    = {2021},
+  doi     = {10.1016/j.scs.2020.102522}
 }
 
 @inproceedings{tseng2018,
-	Author = {Chih-Lin Tseng and Fu-Jen Lin},
-	Title = {Extending Scalability of IoT/M2M Platforms with Fog Computing},
-	Booktitle = {2018 IEEE 4th World Forum on Internet of Things (WF-IoT)},
-	Pages = {825--830},
-	Year = {2018},
-	doi = {10.1109/WF-IoT.2018.8355143}
+  author    = {Chih-Lin Tseng and Fu-Jen Lin},
+  title     = {Extending Scalability of IoT/M2M Platforms with Fog Computing},
+  booktitle = {2018 IEEE 4th World Forum on Internet of Things (WF-IoT)},
+  pages     = {825--830},
+  year      = {2018},
+  doi       = {10.1109/WF-IoT.2018.8355143}
 }
 
 @inproceedings{bourhim2019,
-	Author = {E. H. Bourhim and H. Elbiaze and M. Dieye},
-	Title = {Inter-container Communication Aware Container Placement in Fog Computing},
-	Booktitle = {2019 15th International Conference on Network and Service Management (CNSM)},
-	Pages = {1--6},
-	Year = {2019},
-	doi = {10.23919/CNSM46954.2019.9012697}
+  author    = {E. H. Bourhim and H. Elbiaze and M. Dieye},
+  title     = {Inter-container Communication Aware Container Placement in Fog Computing},
+  booktitle = {2019 15th International Conference on Network and Service Management (CNSM)},
+  pages     = {1--6},
+  year      = {2019},
+  doi       = {10.23919/CNSM46954.2019.9012697}
 }
 
 @book{taylor2022,
-	Author = {Richard Taylor},
-	Title = {Mastering HPCC Systems: Platform Overview and History},
-	Publisher = {Function},
-	Year = {2022},
-	Address = {},
-	Edition = {},
-	ISBN = {},
-	Note = {Kindle Edition}
+  author    = {Richard Taylor},
+  title     = {Mastering HPCC Systems: Platform Overview and History},
+  publisher = {Function},
+  year      = {2022},
+  address   = {},
+  edition   = {},
+  isbn      = {},
+  note      = {Kindle Edition}
 }
 
 @misc{uci_energy,
-    author = {H\'ector Hern\'andez and others},
-    title = {Individual household electric power consumption Data Set},
-    howpublished = {\url{https://archive.ics.uci.edu/dataset/235/individual+household+electric+power+consumption}},
-    note = {Acesso em: 11 ago. 2025}
+  author       = {H\'ector Hern\'andez and others},
+  title        = {Individual household electric power consumption Data Set},
+  howpublished = {\url{https://archive.ics.uci.edu/dataset/235/individual+household+electric+power+consumption}},
+  note         = {Acesso em: 11 ago. 2025}
 }
 
 @misc{greek_water,
-    author = {{Hellenic Data Service}},
-    title = {Water Consumption Dataset},
-    howpublished = {\url{https://data.hellenicdataservice.gr/dataset/78776f38-a58b-4a2a-a8f9-85b964fe5c95}},
-    note = {Acesso em: 11 ago. 2025}
+  author       = {{Hellenic Data Service}},
+  title        = {Water Consumption Dataset},
+  howpublished = {\url{https://data.hellenicdataservice.gr/dataset/78776f38-a58b-4a2a-a8f9-85b964fe5c95}},
+  note         = {Acesso em: 11 ago. 2025}
 }
 
 @standard{openfog2018,
-  title        = {IEEE Standard for Adoption of OpenFog Reference Architecture for Fog Computing},
-  journal      = {IEEE Std 1934-2018},
-  year         = {2018},
-  pages        = {1-176},
-  doi          = {10.1109/IEEESTD.2018.8423800},
-  keywords     = {IEEE Standards, Information technology, Edge computing, Communications technology, adoption, communication technology IEEE 1934™, information technology, OpenFog, operational technology}
+  title    = {IEEE Standard for Adoption of OpenFog Reference Architecture for Fog Computing},
+  journal  = {IEEE Std 1934-2018},
+  year     = {2018},
+  pages    = {1-176},
+  doi      = {10.1109/IEEESTD.2018.8423800},
+  keywords = {IEEE Standards, Information technology, Edge computing, Communications technology, adoption, communication technology IEEE 1934™, information technology, OpenFog, operational technology}
+}
+
+@article{rahman2024,
+  author   = {M. Rahman and M. Hussain},
+  title    = {Testbed Analysis of Multi-Fog Architecture for Interoperable IoT},
+  journal  = {Wireless Networks},
+  volume   = {30},
+  pages    = {451--463},
+  year     = {2024},
+  doi      = {10.1007/s11276-024-03841-y},
+  keywords = {Fog Computing, Multi-Fog Architecture, Interoperability, IoT, Testbed}
+}
+
+@article{oliveira2024,
+  author   = {J. Oliveira and A. Santos and L. Mendes},
+  title    = {Enhancing Modular Application Placement in Hierarchical Fog Computing},
+  journal  = {Computer Communications},
+  volume   = {222},
+  pages    = {180--194},
+  year     = {2024},
+  doi      = {10.1016/j.comcom.2024.03.012},
+  keywords = {Fog Computing, Application Placement, Hierarchical Architecture, Latency, Communication Cost}
+}
+
+@article{boudieb2024,
+  author   = {A. Boudieb and M. Ayed and S. Harous},
+  title    = {Microservice Instances Selection and Load Balancing in Fog Computing},
+  journal  = {Future Generation Computer Systems},
+  volume   = {154},
+  pages    = {510--523},
+  year     = {2024},
+  doi      = {10.1016/j.future.2024.05.019},
+  keywords = {Fog Computing, Microservices, Load Balancing, Reinforcement Learning}
+}
+
+@article{dagostino2025,
+  author   = {R. D’Agostino and M. Longo and G. Palmieri},
+  title    = {A Scalable Fog Computing Solution for Industrial Predictive Maintenance},
+  journal  = {Electronics},
+  volume   = {14},
+  number   = {2},
+  pages    = {1--18},
+  year     = {2025},
+  doi      = {10.3390/electronics14020172},
+  keywords = {Fog Computing, Industrial IoT, Predictive Maintenance, Scalability}
 }
