--- a/Dissertação/beforetext/beforetext.tex
+++ b/Dissertação/beforetext/beforetext.tex
@@ -119,21 +119,20 @@ sendo, meus pais, os maiores entre eles.
 \setlength{\absparsep}{18pt} % ajusta o espaçamento dos parágrafos do resumo
 \begin{resumo}
 	\SingleSpacing
-	Este trabalho apresentou o desenvolvimento e a avaliação de uma arquitetura modular para ambientes de computação em névoa, projetada para suportar comunicação direta entre diferentes domínios e integrar dispositivos de borda, nós de névoa e a nuvem, tomando como referência o modelo do OpenFog Consortium. A solução foi construída com base nos pilares de escalabilidade, abertura, autonomia, programabilidade e hierarquia, considerando o contexto de cidades inteligentes. A proposta incorporou abstração de protocolos para permitir interoperabilidade entre diferentes tecnologias de comunicação, além de um mecanismo de balanceamento dinâmico de carga e agregação de dados para otimizar o uso de recursos e reduzir o tráfego de dados para a nuvem. A metodologia envolveu a simulação de dois dias de operação contínua, com dispositivos distribuídos em dois domínios de névoa e geração periódica de dados, analisando métricas de latência, consumo de memória, throughput, taxa de entrega e fator de agregação. Os resultados indicaram latência ponta a ponta média de 15,6 ms, taxa de entrega de 100\% e redução de aproximadamente 99,97\% nas requisições à nuvem, mantendo desempenho compatível com aplicações sensíveis ao tempo. A comparação com trabalhos como o EXEGESIS evidenciou diferenças no gerenciamento de serviços e na flexibilidade de adaptação a novos cenários, destacando vantagens na separação entre a camada de aplicação e a de protocolos. Entre as perspectivas futuras estão a implementação de autenticação e criptografia ponta a ponta, estratégias de recuperação automática e validação da arquitetura em domínios como saúde conectada e transporte inteligente.
-	
-	\textbf{Palavras-chave}: computação em névoa. interoperabilidade. balanceamento de carga.
+	Este trabalho apresentou o desenvolvimento e a avaliação de uma arquitetura modular voltada a ambientes de computação em névoa, projetada para possibilitar a comunicação direta entre diferentes domínios e integrar dispositivos de borda, nós de névoa e a nuvem, tomando como referência o modelo do OpenFog Consortium. A solução foi construída com base nos princípios de escalabilidade, abertura, autonomia, programabilidade e hierarquia, aplicados ao contexto de cidades inteligentes. A proposta incorporou a abstração de protocolos para promover a interoperabilidade entre diferentes tecnologias de comunicação, além de um mecanismo de balanceamento dinâmico de carga e agregação de dados voltado à otimização do uso de recursos e à redução do tráfego de informações para a nuvem. A metodologia experimental envolveu a simulação de dois dias de operação contínua, com dispositivos distribuídos em dois domínios de névoa e geração periódica de dados. Durante os testes, foram analisados indicadores de latência e consumo de memória. Os resultados mostraram o consumo total de aproximadamente 374 MiB. Em comparação com outras abordagens, a arquitetura demonstrou menor complexidade e menor consumo computacional quando comparada com outras arquiteturas. Como perspectivas futuras, propõe-se a integração de novos protocolos de comunicação e a adoção de mecanismos de autenticação e criptografia ponta a ponta.
+
+	\textbf{Palavras-chave}: computação em névoa, arquitetura modular, interoperabilidade, balanceamento de carga, comunicação entre névoas.
 \end{resumo}
 
 % resumo em inglês
 \begin{resumo}[Abstract]
 	\SingleSpacing
 	\begin{otherlanguage*}{english}
-		This research presented the development and evaluation of a modular architecture for fog computing environments, designed to support direct communication between different domains and to integrate edge devices, fog nodes, and the cloud, taking the OpenFog Consortium reference model as a guideline. The solution was built on the pillars of scalability, openness, autonomy, programmability, and hierarchy, within the context of smart cities. The proposal incorporated protocol abstraction to enable interoperability among different communication technologies, along with a dynamic load balancing mechanism and data aggregation to optimize resource usage and reduce cloud traffic. The methodology involved simulating two days of continuous operation, with devices distributed across two fog domains and generating periodic data, analyzing metrics such as latency, memory consumption, throughput, delivery rate, and aggregation factor. The results indicated an average end-to-end latency of 15.6 ms, a delivery rate of 100\%, and approximately 99.97\% reduction in cloud requests, maintaining performance compatible with time-sensitive applications. Comparison with works such as EXEGESIS highlighted differences in service management and adaptability to new scenarios, with advantages in the separation between the application and protocol layers. Future perspectives include implementing end-to-end authentication and encryption, automatic recovery strategies, and validating the architecture in domains such as connected healthcare and intelligent transportation.
+		This work presented the development and evaluation of a modular architecture for fog computing environments, designed to enable direct communication between different domains and to integrate edge devices, fog nodes, and the cloud, taking the OpenFog Consortium model as a reference. The solution was built upon the principles of scalability, openness, autonomy, programmability, and hierarchy, applied to the context of smart cities. The proposed system incorporated protocol abstraction to promote interoperability among different communication technologies, as well as a dynamic load balancing and data aggregation mechanism aimed at optimizing resource usage and reducing the volume of information transmitted to the cloud. The experimental methodology involved the simulation of two days of continuous operation, with devices distributed across two fog domains and periodic data generation. During the tests, latency and memory consumption indicators were analyzed. The results showed a total memory consumption of approximately 374 MiB. Compared with other approaches, the architecture demonstrated lower complexity and reduced computational demand. As future work, it is proposed to integrate new communication protocols and to adopt end-to-end authentication and encryption mechanisms.
 
-		\textbf{Keywords}: fog computing. interoperability. load balancing.
+		\textbf{Keywords}: fog computing, modular architecture, interoperability, load balancing, inter-fog communication.
 	\end{otherlanguage*}
 \end{resumo}
-
 
 %% resumo em francês 
 %\begin{resumo}[Résumé]
